<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="GVL" Id="{01df8a2e-7bee-4a2a-bc22-820b5c36879d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	G_Dev_state AT%I* : UINT;
	G_Dummy AT%I* :BOOL := FALSE;
	
	
	G_FromYaskawa AT%I* : ARRAY [0..63] OF  BYTE;
	G_ToYaskawa AT%Q* :ARRAY [0..63] OF  BYTE;
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>