<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="Robot_IO_mapping" Id="{5cfd7e78-e982-4ed0-bd92-363f2bf0a0f8}" SpecialFunc="None">
    <Declaration><![CDATA[//Map profinet IOs of yasakawa robot to PLC global variables 

PROGRAM Robot_IO_mapping
VAR
	p_jobnumber : POINTER TO BYTE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*_____robot's outputs mapping from robot to PLC__________*)

//bool outs
Robot_INT_outputs.b_IstInGrundstellung := GVL.G_FromYaskawa[24].0 ;
Robot_INT_outputs.b_Grundstellungen := GVL.G_FromYaskawa[24].1 ;
Robot_INT_outputs.b_ParamGelesen := GVL.G_FromYaskawa[24].2 ;
Robot_INT_outputs.b_Running := GVL.G_FromYaskawa[24].3 ;
Robot_INT_outputs.b_Done := GVL.G_FromYaskawa[24].4 ;

Robot_INT_outputs.Error1 := GVL.G_FromYaskawa[25].0;
Robot_INT_outputs.Error2 := GVL.G_FromYaskawa[25].1;
Robot_INT_outputs.Error3 := GVL.G_FromYaskawa[25].2;
Robot_INT_outputs.Error4 := GVL.G_FromYaskawa[25].3;
Robot_INT_outputs.Error5 := GVL.G_FromYaskawa[25].4;
Robot_INT_outputs.Error6 := GVL.G_FromYaskawa[25].5;
Robot_INT_outputs.Error7 := GVL.G_FromYaskawa[25].6;
Robot_INT_outputs.Error8 := GVL.G_FromYaskawa[25].7;
Robot_INT_outputs.Error9 := GVL.G_FromYaskawa[26].0;
Robot_INT_outputs.Error10 := GVL.G_FromYaskawa[26].1;
Robot_INT_outputs.Error11 := GVL.G_FromYaskawa[26].2;
Robot_INT_outputs.Error12 := GVL.G_FromYaskawa[26].3;
Robot_INT_outputs.Error13 := GVL.G_FromYaskawa[26].4;
Robot_INT_outputs.Error14 := GVL.G_FromYaskawa[26].5;
Robot_INT_outputs.Error15 := GVL.G_FromYaskawa[26].6;
Robot_INT_outputs.Error16 := GVL.G_FromYaskawa[26].7;

//INT outputs
Robot_INT_outputs.Job_Number := GVL.G_FromYaskawa[27];

Robot_INT_outputs.Druckskraft := read_2bytes(GVL.G_FromYaskawa[29] , GVL.G_FromYaskawa[28]);
Robot_INT_outputs.Roll_Geschwindigkeit := read_2bytes(GVL.G_FromYaskawa[31] , GVL.G_FromYaskawa[30]);
Robot_INT_outputs.Contact_Angle := read_2bytes(GVL.G_FromYaskawa[33] , GVL.G_FromYaskawa[32]);
Robot_INT_outputs.Frequeny := read_2bytes(GVL.G_FromYaskawa[35] , GVL.G_FromYaskawa[34]);
Robot_INT_outputs.Start_Roll_Angle := read_2bytes(GVL.G_FromYaskawa[37] , GVL.G_FromYaskawa[36]);
Robot_INT_outputs.End_Roll_Angle := read_2bytes(GVL.G_FromYaskawa[39] , GVL.G_FromYaskawa[38]);
Robot_INT_outputs.FWD_Speed := read_2bytes(GVL.G_FromYaskawa[41] , GVL.G_FromYaskawa[40]);
Robot_INT_outputs.Shift_Speed_X_FWD_Speed := read_2bytes(GVL.G_FromYaskawa[43] , GVL.G_FromYaskawa[42]);
Robot_INT_outputs.Shift_Speed_Y_FWD_Speed := read_2bytes(GVL.G_FromYaskawa[45] , GVL.G_FromYaskawa[44]);
Robot_INT_outputs.Rot_Speed_X := read_2bytes(GVL.G_FromYaskawa[47] , GVL.G_FromYaskawa[46]);
Robot_INT_outputs.Rot_Speed_Y := read_2bytes(GVL.G_FromYaskawa[49] , GVL.G_FromYaskawa[48]);
Robot_INT_outputs.Rot_Speed_Z := read_2bytes(GVL.G_FromYaskawa[51] , GVL.G_FromYaskawa[50]);



(*_____robot's inputs mapping from plc to robot__________*)

//Bool inputs

Robot_INT_inputs.b_Grundstellung := GVL.G_ToYaskawa[24].0;
Robot_INT_inputs.b_UpdateParam := GVL.G_ToYaskawa[24].1;
Robot_INT_inputs.b_Start := GVL.G_ToYaskawa[24].2;
Robot_INT_inputs.b_ProgAbbrechen := GVL.G_ToYaskawa[24].3;
Robot_INT_inputs.b_Quittieren := GVL.G_ToYaskawa[24].4;

//INT inputs
p_jobnumber := ADR(Robot_INT_inputs.Job_Number);
GVL.G_ToYaskawa[25] := p_jobnumber^; 

GVL.G_ToYaskawa[26] := write_lowbyte(Robot_INT_inputs.Druckskraft); 
GVL.G_ToYaskawa[27] := write_highbyte(Robot_INT_inputs.Druckskraft); 

GVL.G_ToYaskawa[28] := write_lowbyte(Robot_INT_inputs.Roll_Geschwindigkeit); 
GVL.G_ToYaskawa[29] := write_highbyte(Robot_INT_inputs.Roll_Geschwindigkeit); 

GVL.G_ToYaskawa[30] := write_lowbyte(Robot_INT_inputs.Contact_Angle); 
GVL.G_ToYaskawa[31] := write_highbyte(Robot_INT_inputs.Contact_Angle); 

GVL.G_ToYaskawa[32] := write_lowbyte(Robot_INT_inputs.Frequeny); 
GVL.G_ToYaskawa[33] := write_highbyte(Robot_INT_inputs.Frequeny); 

GVL.G_ToYaskawa[34] := write_lowbyte(Robot_INT_inputs.Start_Roll_Angle); 
GVL.G_ToYaskawa[35] := write_highbyte(Robot_INT_inputs.Start_Roll_Angle); 

GVL.G_ToYaskawa[36] := write_lowbyte(Robot_INT_inputs.End_Roll_Angle); 
GVL.G_ToYaskawa[37] := write_highbyte(Robot_INT_inputs.End_Roll_Angle); 

GVL.G_ToYaskawa[38] := write_lowbyte(Robot_INT_inputs.FWD_Speed); 
GVL.G_ToYaskawa[39] := write_highbyte(Robot_INT_inputs.FWD_Speed); 

GVL.G_ToYaskawa[40] := write_lowbyte(Robot_INT_inputs.Shift_Speed_X_FWD_Speed); 
GVL.G_ToYaskawa[41] := write_highbyte(Robot_INT_inputs.Shift_Speed_X_FWD_Speed); 

GVL.G_ToYaskawa[42] := write_lowbyte(Robot_INT_inputs.Shift_Speed_Y_FWD_Speed); 
GVL.G_ToYaskawa[43] := write_highbyte(Robot_INT_inputs.Shift_Speed_Y_FWD_Speed); 

GVL.G_ToYaskawa[44] := write_lowbyte(Robot_INT_inputs.Rot_Speed_X); 
GVL.G_ToYaskawa[45] := write_highbyte(Robot_INT_inputs.Rot_Speed_X); 

GVL.G_ToYaskawa[46] := write_lowbyte(Robot_INT_inputs.Rot_Speed_Y); 
GVL.G_ToYaskawa[47] := write_highbyte(Robot_INT_inputs.Rot_Speed_Y); 

GVL.G_ToYaskawa[48] := write_lowbyte(Robot_INT_inputs.Rot_Speed_Z); 
GVL.G_ToYaskawa[49] := write_highbyte(Robot_INT_inputs.Rot_Speed_Z); ]]></ST>
    </Implementation>
    <LineIds Name="Robot_IO_mapping">
      <LineId Id="5" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="2" />
      <LineId Id="30" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="37" Count="14" />
      <LineId Id="32" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="10" />
      <LineId Id="57" Count="2" />
      <LineId Id="56" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="63" Count="3" />
      <LineId Id="68" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="118" Count="1" />
      <LineId Id="117" Count="0" />
      <LineId Id="121" Count="1" />
      <LineId Id="120" Count="0" />
      <LineId Id="124" Count="1" />
      <LineId Id="123" Count="0" />
      <LineId Id="127" Count="1" />
      <LineId Id="126" Count="0" />
      <LineId Id="130" Count="1" />
      <LineId Id="129" Count="0" />
      <LineId Id="133" Count="1" />
      <LineId Id="132" Count="0" />
      <LineId Id="136" Count="1" />
      <LineId Id="135" Count="0" />
      <LineId Id="139" Count="1" />
      <LineId Id="138" Count="0" />
      <LineId Id="142" Count="1" />
      <LineId Id="141" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>